--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-qiskit==0.36
-matplotlib~=3.5.1
-pandas~=1.4.2
-setuptools~=62.1.0
-numpy~=1.21.4
-scipy~=1.8.0
-openfermion~=1.5
-qulacs
+nlopt~=2.7.1
+numpy~=1.23.5
+openfermion~=1.6.0
+qiskit~=0.45.1
+qiskit_aer~=0.13.1
+qiskit_experiments~=0.5.4
+qiskit_ibmq_provider~=0.20.2
+qiskit_terra~=0.45.1
+qulacs~=0.6.2
+scipy~=1.11.4
+setuptools~=68.0.0
+sympy~=1.12
