Expectation val bug (#1)
* Add tests which fail and need to be made passing.

* Fix .gitignore.

* Fix eval check in test.

* Fix definition of |0> and |1> eigenvalues. Updated priority appropriately and improve tests.

* Fix test, add comment.

* Make comment clearer.

---------

Co-authored-by: Ben Jaderberg <14994219+bjader@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-<<<<<<< Updated upstream
 /**/__pycache__/*
-.vscode/*
+.vscode/
 .idea*
 *.egg-info/
 =======
@@ -363,4 +362,3 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm,visualstudiocode,osx,macos
->>>>>>> Stashed changes
